# AEDA-MIEIC

./: README.md
projeto/parte_1/codigo/: CMakeLists.txt
projeto/parte_2/codigo/AEDA1920_Turma4_G8/: CMakeLists.txt
testes_antigos/ci2/14-15/: CMakeLists.txt  main.cpp
testes_antigos/ci2/14-15/Tests/: Supermercado.cpp  Supermercado.h  Test.cpp
testes_antigos/ci2/15-16/: CMakeLists.txt  main.cpp
testes_antigos/ci2/15-16/Tests/: Test.cpp  pizzeria.cpp  pizzeria.h
testes_antigos/ci2/16-17/: CMakeLists.txt
testes_antigos/ci2/16-17/Tests/: AfterSalesService.cpp  Purchase.cpp  Test.cpp
testes_antigos/ci2/17-18/: CMakeLists.txt
testes_antigos/ci2/17-18/Tests/: Doctor.cpp  Hospital.cpp  Test.cpp
testes_antigos/ci2/18-19/: CMakeLists.txt
testes_antigos/ci2/18-19/Tests/: CSimpleList.h  CStack.h  Kart.cpp
testes_antigos/ci3/15-16/: CMakeLists.txt
testes_antigos/ci3/15-16/Tests/: Dish.cpp  Dish.h  Restaurant.cpp  Table.cpp  Test.cpp
testes_antigos/ci3/16-17/Tests/: Book.cpp  ReadingClub.cpp  ReadingClub.h  Test.cpp
testes_antigos/ci3/17-18/Tests/: Expertize.cpp  FEUPConsulting.cpp  FEUPConsulting.h  Student.cpp  Test.cpp
testes_antigos/ci3/18-19/Tests/: PropertyTypeItem.cpp  REAgency.cpp  REAgency.h  tests.cpp
